<resources>
    <string name="app_name">AkmalApps</string>
    <string name="akmalapps"><b>AkmalApps </b></string>
    <string name="welcome">Selamat Datang</string>
    <string name="selamat">Selamat Datang</string>
    <string name="lanjut">Lanjutkan</string>
    <string name="about_me">About Me</string>
    <string name="text_about_me">Nama saya Akmal RIzqulloh biasa dipanggil akmal atau mal saya belajar di Universitas Komputer Indonesia dengan jurusan Teknik Informatika</string>
    <string name="hobby">Hobby</string>
    <string name="text_hobby">Hoby Saya Bermain games, mendengarkan lagu dan menonton beberapa film</string>
    <string name="makanan_minuman">Makanan dan Minuman Kesukaan</string>
    <string name="text_makanan_minuman">Daging Rendang dan Juice Alpukat</string>
    <string name="my_contact">My Contact</string>
    <string name="no_hp">085156068629</string>
    <string name="email">csxenomorp@gmail.com</string>
    <string name="the_weekend">Less Than Zero</string>
    <string name="less_than_zero">The Weekend</string>
    <string name="pov">Ariana Grande</string>
    <string name="ariana_grande">pov</string>
    <string name="paradise">Cold play</string>
    <string name="cold_play">paradise</string>
    <string name="grenade">Bruno Mars</string>
    <string name="bruno_mars">Grenade</string>
    <string name="Lany">13</string>
    <string name="tiga_belas">Lany</string>
    <string name="robbers">The 1975</string>
    <string name="the_sembilan">Robbers</string>
    <string name="lauv">Never Not</string>
    <string name="never_not">Lauv</string>
    <string name="daily_act">Daily Activity</string>

</resources>