<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal"
    tools:context=".home">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:src="@drawable/logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/card_title_saya"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/img_saya"
                android:layout_below="@+id/card_title_saya"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="137dp" />

            <TextView
                android:id="@+id/card_content_saya"
                android:layout_below="@+id/img_saya"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_about_me"
                android:textSize="15sp"
                android:textColor="@color/black"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/card_title_hobby"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobby"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/card_content_hobby"
                android:layout_below="@+id/card_title_hobby"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_hobby"
                android:textSize="15sp"
                android:textColor="@color/black"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/makanan_minuman"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/makanan_minuman"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/card_content_makes"
                android:layout_below="@+id/makanan_minuman"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_makanan_minuman"
                android:textSize="15sp"
                android:textColor="@color/black"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>