<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment_about">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:padding="2dp"
            android:src="@drawable/logo" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/card_title_saya"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_me"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>


                <ImageView
                    android:id="@+id/img_saya"
                    android:layout_below="@+id/card_title_saya"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="125dp"
                    android:src="@drawable/profile_img"/>

                <TextView
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_saya"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/text_about_me"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/my_contact"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_contact"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"/>


        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:drawablePadding="15dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/gmail"
            android:textSize="15sp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:drawablePadding="15dp"
            android:text="@string/no_hp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:drawableLeft="@drawable/wa"
            />


    </LinearLayout>

</LinearLayout>