<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".fragment_favorite">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:src="@drawable/logo" />

    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Music"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_favorite"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/the_weeknd"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/the_weekend"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/less_than_zero"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_favorite"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ariana"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/less_than_zero"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/pov"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_favorite"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/cold_play"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/paradise"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/cold_play"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_favorite"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/bruno_mars"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/grenade"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/bruno_mars"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_favorite"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/lany"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/Lany"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/tiga_belas"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_favorite"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/the_1975"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/robbers"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/the_sembilan"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_favorite"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="5dp"/>

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/lauv"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/lauv"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/never_not"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </LinearLayout>
    </ScrollView>
</LinearLayout>