<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment_home">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:gravity="center_horizontal">

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/logo" />

            </FrameLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/card_title_saya"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_me"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <ImageView
                        android:id="@+id/img_saya"
                        android:layout_below="@+id/card_title_saya"
                        android:layout_width="130dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginHorizontal="120dp"
                        android:src="@drawable/profile_img"/>

                    <TextView
                        android:id="@+id/card_content_saya"
                        android:layout_below="@+id/img_saya"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_about_me"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/card_title_hobby"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hobby"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <LinearLayout
                        android:id="@+id/layout_view_img"
                        android:layout_below="@+id/card_title_hobby"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/card_content_hobby"
                        android:layout_below="@+id/layout_view_img"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_hobby"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/card_title_makes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/makanan_minuman"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_ayam"
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        android:layout_below="@+id/card_title_makes"
                        android:layout_marginHorizontal="35dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/makanan1" />

                    <ImageView
                        android:id="@+id/makanan1"
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        android:layout_below="@+id/card_title_makes"
                        android:layout_marginHorizontal="200dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/makanan2" />

                    <TextView
                        android:id="@+id/makanan2"
                        android:layout_below="@+id/img_ayam"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_makanan_minuman"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>